Add event listener to menu Links, close menu on link click

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googleMukebotagmanager.com/gtag/js?id=G-95YMP3C67Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googleMukebotagmanager.com/gtag/js?id=G-95YMP3C67Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-95YMP3C67Q');
-</script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    gtag('config', 'G-95YMP3C67Q');
+  </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="./CSS/style.css" />
 </head>
+
 <body>
   <header class="main-header d-flex">
     <h2>Welcome</h2>
@@ -32,206 +34,212 @@
     </nav>
   </header>
   <main class="container">
-      <section class="main-section" id="section-home">
-        <div class="main-section-title">
-          <h1 class="h2-size">Hey there. I’m Mukebo.</h1>
-          <h2 class="h2-size">I’m a software developer</h2>
-        </div>
-        <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p> 
-        <div class="icons-container">
-          <ul class="social-media-icons d-flex flex-center">
-            <li>
-              <a href="https://twitter.com/BenMukebo">
-                <img src="./images/icons/twitter.png" alt="twitter">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
-                <img src="./images/icons/Linkedin-icon.png" alt="linkedin">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/icons/medium.png" alt="medium">
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/BenMukebo">
-                <img src="./images/icons/github.png" alt="github">
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="./images/icons/angellist.png" alt="angellist">
-              </a>
-            </li>
-          </ul>
-        </div>  
-        <div class="scroll-down-icon">
-          <a href="#">
-            <img src="./images/icons/Disabled.png" class="fa" alt="scroll-down" />
-          </a>
-        </div>
-      </section>
-      <section class="works-section d-flex">
-        <div class="works-section-title">
-          <h2 class="h2-size">My Recent Works</h2>
-        </div>
-        <div class="card-container">
-          <div class="card d-flex">
-            <img src="#" alt="">
-            <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang d-flex">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavScript</li>
-              <li>html</li>
-            </ul>
-            <button type="button" class="btn-card">See Project</button>
-          </div>
-          <div class="card d-flex">
-            <img src="#" alt="">
-            <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang d-flex">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavScript</li>
-              <li>html</li>
-            </ul>
-            <button type="button" class="btn-card">See Project</button>
-          </div>
-          <div class="card d-flex">
-            <img src="#" alt="">
-            <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang d-flex">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavScript</li>
-              <li>html</li>
-            </ul>
-            <button type="button" class="btn-card">See Project</button>
-          </div>
-          <div class="card d-flex">
-            <img src="#" alt="">
-            <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang d-flex">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavScript</li>
-              <li>html</li>
-            </ul>
-            <button type="button" class="btn-card">See Project</button>
-          </div>
-          <div class="card d-flex">
-            <img src="#" alt="">
-            <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang d-flex">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavScript</li>
-              <li>html</li>
-            </ul>
-            <button type="button" class="btn-card">See Project</button>
-          </div>
-          <div class="card d-flex">
-            <img src="#" alt="">
-            <h3>Multi-Post Stories Gain+Glory</h3>
-            <ul class="program-lang d-flex">
-              <li>Ruby on rails</li>
-              <li>css</li>
-              <li>JavScript</li>
-              <li>html</li>
-            </ul>
-            <button type="button" class="btn-card">See Project</button>
-          </div>
-        </div>
-      </section>
-      <section class="about-section" id="section-about">
-        <div class="about d-flex flex-center">
-          <h2 class="h2-size">About me</h2>
-          <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don’t hestiate to contact me.</p>
-          <button type="button" class="btn-resume">Get My Resume</button>
-        </div>
-        <ul class="card-wrapper flex-center">
-          <li class="cards d-flex flex-center">
-            <img src="./images/icons/icon-languages@2x.svg" class="tools-img" alt="languages">
-            <h3>Languages</h3>
-            <ul class="languages d-flex">
-              <li>JavaScript</li>
-              <li>Ruby</li>
-              <li>Html</li>
-              <li>CSS</li>
-            </ul>    
+    <section class="main-section" id="section-home">
+      <div class="main-section-title">
+        <h1 class="h2-size">Hey there. I’m Mukebo.</h1>
+        <h2 class="h2-size">I’m a software developer</h2>
+      </div>
+      <p> I can help you build a product , feature or website Look through some of my work and experience! If you like
+        what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      <div class="icons-container">
+        <ul class="social-media-icons d-flex flex-center">
+          <li>
+            <a href="https://twitter.com/BenMukebo">
+              <img src="./images/icons/twitter.png" alt="twitter">
+            </a>
           </li>
-          <li class="cards d-flex flex-center">
-            <img src="./images/icons/icon-frameworks@2x.svg" class="tools-img" alt="frameworks">
-            <h3>Frameworks</h3>
-            <ul class="languages d-flex">
-              <li>Bootstrap</li>
-              <li>Ruby on rails</li>
-              <li>RSpec</li>
-              <li>Capybara</li>
-              <li>Selenium</li>
-            </ul>      
+          <li>
+            <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/">
+              <img src="./images/icons/Linkedin-icon.png" alt="linkedin">
+            </a>
           </li>
-          <li  class="cards d-flex flex-center">
-            <img src="./images/icons/icon-skills@2x.svg" class="tools-img" alt="skills">
-            <h3>Skills</h3>
-            <ul class="languages d-flex">
-              <li>Codekit</li>
-              <li>GitHub</li>
-              <li>Codepen</li>
-              <li>Gitlab</li>
-              <li>Terminal</li>
-            </ul>   
+          <li>
+            <a href="#">
+              <img src="./images/icons/medium.png" alt="medium">
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/BenMukebo">
+              <img src="./images/icons/github.png" alt="github">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/icons/angellist.png" alt="angellist">
+            </a>
           </li>
         </ul>
-      </section>
-      <section  class="contact-form-section d-flex flex-center" id="section-contact">
-        <div class="form-sub-container">
-          <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
-          <form action="https://formspree.io/f/xnqlovnj" method="post">
-            <div>
-              <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required>
-            </div>
-            <div>
-              <input type="email" id="mail" name="user_email" placeholder="Email-address" required>
-            </div>
-            <div>
-              <textarea id="msg" name="user_message" placeholder="Enter text here" rows="5" maxlength="500" required></textarea>
-            </div>
-            <div>
-              <button type="submit" class="footer-btn">Get in touch</button>
-            </div>
-          </form>
-        </div>  
-        <div class="footer-icons">
-          <ul class="social-media-icons d-flex flex-center">
-            <li>
-              <a href="https://twitter.com/BenMukebo"><img src="./images/icons/twitter.png" alt="twitter"></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/"><img src="./images/icons/Linkedin-icon.png" alt="linkedin"></a>
-            </li>
-            <li>
-              <a href="#"><img src="./images/icons/medium.png" alt="medium"></a>
-            </li>
-            <li>
-              <a href="https://github.com/BenMukebo"><img src="./images/icons/github.png" alt="github"></a>
-            </li>
-            <li>
-              <a href="#"><img src="./images/icons/angellist.png" alt="angellist"></a>
-            </li>
+      </div>
+      <div class="scroll-down-icon">
+        <a href="#">
+          <img src="./images/icons/Disabled.png" class="fa" alt="scroll-down" />
+        </a>
+      </div>
+    </section>
+    <section class="works-section d-flex">
+      <div class="works-section-title">
+        <h2 class="h2-size">My Recent Works</h2>
+      </div>
+      <div class="card-container">
+        <div class="card d-flex">
+          <img src="#" alt="">
+          <h3>Multi-Post Stories Gain+Glory</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <li>html</li>
           </ul>
-        </div>  
-      </section>
-      <footer>
-        <div class="mail-container">
-          <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
-        </div> 
-      </footer>
+          <button type="button" class="btn-card">See Project</button>
+        </div>
+        <div class="card d-flex">
+          <img src="#" alt="">
+          <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <li>html</li>
+          </ul>
+          <button type="button" class="btn-card">See Project</button>
+        </div>
+        <div class="card d-flex">
+          <img src="#" alt="">
+          <h3>Multi-Post Stories Gain+Glory</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <li>html</li>
+          </ul>
+          <button type="button" class="btn-card">See Project</button>
+        </div>
+        <div class="card d-flex">
+          <img src="#" alt="">
+          <h3>Multi-Post Stories Gain+Glory</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <li>html</li>
+          </ul>
+          <button type="button" class="btn-card">See Project</button>
+        </div>
+        <div class="card d-flex">
+          <img src="#" alt="">
+          <h3>Multi-Post Stories Gain+Glory</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <li>html</li>
+          </ul>
+          <button type="button" class="btn-card">See Project</button>
+        </div>
+        <div class="card d-flex">
+          <img src="#" alt="">
+          <h3>Multi-Post Stories Gain+Glory</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <li>html</li>
+          </ul>
+          <button type="button" class="btn-card">See Project</button>
+        </div>
+      </div>
+    </section>
+    <section class="about-section" id="section-about">
+      <div class="about d-flex flex-center">
+        <h2 class="h2-size">About me</h2>
+        <p>I can help you build a product , feature or website Look through some of my work and experience! If you like
+          what you see and have a project you need coded,
+          don’t hestiate to contact me.</p>
+        <button type="button" class="btn-resume">Get My Resume</button>
+      </div>
+      <ul class="card-wrapper flex-center">
+        <li class="cards d-flex flex-center">
+          <img src="./images/icons/icon-languages@2x.svg" class="tools-img" alt="languages">
+          <h3>Languages</h3>
+          <ul class="languages d-flex">
+            <li>JavaScript</li>
+            <li>Ruby</li>
+            <li>Html</li>
+            <li>CSS</li>
+          </ul>
+        </li>
+        <li class="cards d-flex flex-center">
+          <img src="./images/icons/icon-frameworks@2x.svg" class="tools-img" alt="frameworks">
+          <h3>Frameworks</h3>
+          <ul class="languages d-flex">
+            <li>Bootstrap</li>
+            <li>Ruby on rails</li>
+            <li>RSpec</li>
+            <li>Capybara</li>
+            <li>Selenium</li>
+          </ul>
+        </li>
+        <li class="cards d-flex flex-center">
+          <img src="./images/icons/icon-skills@2x.svg" class="tools-img" alt="skills">
+          <h3>Skills</h3>
+          <ul class="languages d-flex">
+            <li>Codekit</li>
+            <li>GitHub</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="contact-form-section d-flex flex-center" id="section-contact">
+      <div class="form-sub-container">
+        <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in
+          touch.</h2>
+        <form action="https://formspree.io/f/xnqlovnj" method="post">
+          <div>
+            <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required>
+          </div>
+          <div>
+            <input type="email" id="mail" name="user_email" placeholder="Email-address" required>
+          </div>
+          <div>
+            <textarea id="msg" name="user_message" placeholder="Enter text here" rows="5" maxlength="500"
+              required></textarea>
+          </div>
+          <div>
+            <button type="submit" class="footer-btn">Get in touch</button>
+          </div>
+        </form>
+      </div>
+      <div class="footer-icons">
+        <ul class="social-media-icons d-flex flex-center">
+          <li>
+            <a href="https://twitter.com/BenMukebo"><img src="./images/icons/twitter.png" alt="twitter"></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/kasongo-mukebo-ben-591720205/"><img
+                src="./images/icons/Linkedin-icon.png" alt="linkedin"></a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/icons/medium.png" alt="medium"></a>
+          </li>
+          <li>
+            <a href="https://github.com/BenMukebo"><img src="./images/icons/github.png" alt="github"></a>
+          </li>
+          <li>
+            <a href="#"><img src="./images/icons/angellist.png" alt="angellist"></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <footer>
+      <div class="mail-container">
+        <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
+      </div>
+    </footer>
   </main>
   <script src="./js/menu.js"></script>
 </body>
+
 </html>
