Add, modify sections Id attributes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <h2>Welcome</h2>
     <nav class="d-flex">
       <ul class="nav-menu d-flex flex-center">
-        <li class="nav-link active"><a href="#section-about">About</a></li>
-        <li class="nav-link"><a href="#section-contact">Contact</a></li>
-        <li class="nav-link"><a href="#section-home">Portoflio</a></li>
+        <li class="nav-link"><a href="#Portfolio">Portoflio</a></li>
+        <li class="nav-link active"><a href="#About">About</a></li>
+        <li class="nav-link"><a href="#Contact">Contact</a></li>
       </ul>
       <!-- <i class="fa fa-bars fa-2x"></i> -->
       <img src="./images/icons/Union.png" class="menu-btn" alt="union">
@@ -34,7 +34,7 @@
     </nav>
   </header>
   <main class="container">
-    <section class="main-section" id="section-home">
+    <section class="main-section">
       <div class="main-section-title">
         <h1 class="h2-size">Hey there. I’m Mukebo.</h1>
         <h2 class="h2-size">I’m a software developer</h2>
@@ -76,7 +76,7 @@
         </a>
       </div>
     </section>
-    <section class="works-section d-flex">
+    <section id="Portfolio" class="works-section d-flex">
       <div class="works-section-title">
         <h2 class="h2-size">My Recent Works</h2>
       </div>
@@ -149,7 +149,7 @@
         </div>
       </div>
     </section>
-    <section class="about-section" id="section-about">
+    <section class="about-section" id="About">
       <div class="about d-flex flex-center">
         <h2 class="h2-size">About me</h2>
         <p>I can help you build a product , feature or website Look through some of my work and experience! If you like
@@ -192,7 +192,7 @@
         </li>
       </ul>
     </section>
-    <section class="contact-form-section d-flex flex-center" id="section-contact">
+    <section id="Contact" class="contact-form-section d-flex flex-center">
       <div class="form-sub-container">
         <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in
           touch.</h2>
