--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="nav-link active"><a href="#About">About</a></li>
         <li class="nav-link"><a href="#Contact">Contact</a></li>
       </ul>
-      <img src="./images/icons/Union.png" class="menu-btn" alt="union">
+      <img src="./images/icons/Union.png" class="show-menu-btn" alt="union">
       <img src="./images/icons/Icon.png" class="closed-menu-btn" alt="">
     </nav>
   </header>
@@ -232,7 +232,7 @@
         </ul>
       </div>
     </section>
-    <footer>
+    <footer class="footer">
       <div class="mail-container">
         <a href="mailto:l.benkasmukebo7@gmail.com?subject=Contact%20Ben">l.benkasmukebo7@gmail.com</a>
       </div>
