--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <header class="main-header d-flex">
     <h2>Welcome</h2>
-    <nav class="d-flex">
+    <nav class="nav d-flex">
       <ul class="nav-menu d-flex flex-center">
         <li class="nav-link"><a href="#Portfolio">Portoflio</a></li>
         <li class="nav-link active"><a href="#About">About</a></li>
@@ -75,12 +75,13 @@
         </a>
       </div>
     </section>
+
     <section id="Portfolio" class="works-section d-flex">
       <div class="works-section-title">
         <h2 class="h2-size">My Recent Works</h2>
       </div>
-      <div class="card-container">
-        <div class="card d-flex">
+      <ul class="card-container">
+        <li class="card d-flex">
           <img src="#" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -90,8 +91,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </div>
-        <div class="card d-flex">
+        </li>
+        <li class="card d-flex">
           <img src="#" alt="">
           <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -101,8 +102,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </div>
-        <div class="card d-flex">
+        </li>
+        <li class="card d-flex">
           <img src="#" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -112,8 +113,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </div>
-        <div class="card d-flex">
+        </li>
+        <li class="card d-flex">
           <img src="#" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -123,8 +124,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </div>
-        <div class="card d-flex">
+        </li>
+        <li class="card d-flex">
           <img src="#" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -134,8 +135,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </div>
-        <div class="card d-flex">
+        </li>
+        <li class="card d-flex">
           <img src="#" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -145,8 +146,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
     <section class="about-section" id="About">
       <div class="about d-flex flex-center">
