Create a mobite data array and store all of the information for all card project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <ul class="card-container">
         <li class="card d-flex">
-          <img src="#" alt="">
+          <img src="./images/Snapshoot-Portfolio-mobile@2x.png" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
             <li>Ruby on rails</li>
@@ -93,7 +93,7 @@
           <button type="button" class="btn-card">See Project</button>
         </li>
         <li class="card d-flex">
-          <img src="#" alt="">
+          <img src="./images/icons/Icon-GitHub-1.svg" alt="">
           <h3 class="project-title">Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
             <li>Ruby on rails</li>
