Implement a functon which create a project card throuth the projects object projecties

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2 class="h2-size">My Recent Works</h2>
       </div>
       <ul class="card-container">
-        <li class="card d-flex">
+        <!-- <li class="card d-flex">
           <img src="./images/Snapshoot-Portfolio-mobile@2x.png" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -102,8 +102,8 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </li>
-        <li class="card d-flex">
+        </li> -->
+        <!-- <li class="card d-flex">
           <img src="#" alt="">
           <h3>Multi-Post Stories Gain+Glory</h3>
           <ul class="program-lang d-flex">
@@ -146,7 +146,7 @@
             <li>html</li>
           </ul>
           <button type="button" class="btn-card">See Project</button>
-        </li>
+        </li> -->
       </ul>
     </section>
     <section class="about-section" id="About">
@@ -240,6 +240,8 @@
     </footer>
   </main>
   <script src="./js/menu.js"></script>
+  <script src="./js/work-section.js"></script>
+
 </body>
 
 </html>
