--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li class="nav-link"><a href="#Contact">Contact</a></li>
       </ul>
       <img src="./images/icons/Union.png" class="show-menu-btn" alt="union">
-      <img src="./images/icons/Icon.png" class="closed-menu-btn" alt="">
+      <img src="./images/icons/Icon@2x.svg" class="closed-menu-btn" alt="">
     </nav>
   </header>
 
@@ -148,7 +148,34 @@
           <button type="button" class="btn-card">See Project</button>
         </li> -->
       </ul>
+
+      
     </section>
+    <article>
+      <div class="card-popup">
+        <!-- <div class="hide-icon">
+        </div> -->
+        <div class="project-img">
+          <img class="hide-icon" src="./images/icons/Disabled.svg" alt="">
+          <img class="card-img" src="./images/Snapshoot-Portfolio-mobile@2x.png" alt="">
+        </div>
+        <div class="article">
+          <h3>Keeping track of hundreds of components_1</h3>
+          <ul class="program-lang d-flex">
+            <li>Ruby on rails</li>
+            <li>css</li>
+            <li>JavScript</li>
+            <!-- <li>html</li> -->
+          </ul>
+          <p>Project_1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the relea</p>
+          <div class="btns-popup d-flex flex-center">
+            <button type="button" class="btn-card d-flex flex-center">See Live <img src="./images/icons/Icon-Export@2x.svg" alt=""></button>
+            <button type="button" class="btn-card d-flex flex-center">See Source <img src="./images/icons/Icon-GitHub-1.svg" alt=""></button>
+          </div>
+        </div>
+      </div>
+    </article>
+
     <section class="about-section" id="About">
       <div class="about d-flex flex-center">
         <h2 class="h2-size">About me</h2>
