Add createPopup() function into work-section.js

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ben's Portfolio</title>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-95YMP3C67Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-95YMP3C67Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
     gtag('config', 'G-95YMP3C67Q');
   </script>
@@ -149,12 +149,12 @@
         </li> -->
       </ul>
     </section>
-    
+
     <article>
-      <div class="card-popup">
-        <!-- <div class="hide-icon">
+      <!-- <div class="card-popup"> -->
+      <!-- <div class="hide-icon">
         </div> -->
-        <div class="project-img">
+      <!-- <div class="project-img">
           <img class="hide-icon" src="./images/icons/Disabled.svg" alt="">
           <img class="card-img" src="./images/Snapshoot-Portfolio-mobile@2x.png" alt="">
         </div>
@@ -163,16 +163,22 @@
           <ul class="program-lang d-flex">
             <li>Ruby on rails</li>
             <li>css</li>
-            <li>JavScript</li>
-            <!-- <li>html</li> -->
-          </ul>
-          <p>Project_1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the relea</p>
+            <li>JavScript</li> -->
+      <!-- <li>html</li> -->
+      <!-- </ul>
+          <p>Project_1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it 1960s with the relea</p>
           <div class="btns-popup d-flex flex-center">
-            <button type="button" class="btn-card d-flex flex-center">See Live <img src="./images/icons/Icon-Export@2x.svg" alt=""></button>
-            <button type="button" class="btn-card d-flex flex-center">See Source <img src="./images/icons/Icon-GitHub-1.svg" alt=""></button>
+            <button type="button" class="btn-card d-flex flex-center">See Live <img
+                src="./images/icons/Icon-Export@2x.svg" alt=""></button>
+            <button type="button" class="btn-card d-flex flex-center">See Source <img
+                src="./images/icons/Icon-GitHub-1.svg" alt=""></button>
           </div>
         </div>
-      </div>
+      </div> -->
     </article>
 
     <section class="about-section" id="About">
