Completed the mobile size popup window

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </ul>
     </section>
 
-    <article>
+    <article class="flex-center">
       <!-- <div class="card-popup"> -->
       <!-- <div class="hide-icon">
         </div> -->
