--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="form-sub-container">
         <h2 class="h2-size">I'm always interested in hearing about new projects, so if you'd like to chat please get in
           touch.</h2>
-        <form action="https://formspree.io/f/xnqlovnj" method="post">
+        <form action="https://formspree.io/f/xnqlovnj" method="post" id="form">
           <div>
             <input type="text" id="name" name="user_name" placeholder="Full name" maxlength="30" required>
           </div>
@@ -142,8 +142,9 @@
             <textarea id="msg" name="user_message" placeholder="Enter text here" rows="5" maxlength="500"
               required></textarea>
           </div>
-          <div>
+          <div class="btn-submit-alert">
             <button type="submit" class="footer-btn">Get in touch</button>
+            <small class="alert">Email field has to be in lower case.</small>
           </div>
         </form>
       </div>
