Add an addventlistener to the form

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
   </main>
   <script src="./js/work-section.js"></script>
   <script src="./js/menu.js"></script>
+  <script src="./js/valid.js"></script>
 
 </body>
 
