--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
           <div class="btn-submit-alert">
             <button type="submit" class="footer-btn">Get in touch</button>
-            <small class="alert">Email field has to be in lower case.</small>
+            <!-- <small class="alert">Email field has to be in lower case.</small> -->
           </div>
         </form>
       </div>
