Make some better changes to my portfoio

--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
       <ul class="card-container">
       </ul>
     </section>
-    <article class="flex-center">
+
+    <article class="">
     </article>
+
     <section class="about-section" id="About">
       <div class="about d-flex flex-center">
         <h2 class="h2-size">About me</h2>
