--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="container">
     <section class="main-section">
       <div class="main-section-title">
-        <h1 class="h2-size">Hey there. I’m Mukebo.</h1>
+        <h1 class="h2-size">Hey there. I’m Ben Mukebo.</h1>
         <h2 class="h2-size">I’m a software developer</h2>
       </div>
       <p> I can help you build a product , feature or website Look through some of my work and experience! If you like
