Update Frameworks and skills sections

--- a/index.html
+++ b/index.html
@@ -110,21 +110,23 @@
           <h3>Frameworks</h3>
           <ul class="languages d-flex">
             <li>Bootstrap</li>
+            <li>React & Redux</li>
+            <li>SASS</li>
             <li>Ruby on rails</li>
-            <li>RSpec</li>
-            <li>Capybara</li>
-            <li>Selenium</li>
+            <li>PostgreSQL</li>
           </ul>
         </li>
         <li class="cards d-flex flex-center">
           <img src="./images/icons/icon-skills@2x.svg" class="tools-img" alt="skills">
           <h3>Skills</h3>
           <ul class="languages d-flex">
-            <li>Codekit</li>
             <li>GitHub</li>
-            <li>Codepen</li>
-            <li>Gitlab</li>
-            <li>Terminal</li>
+            <li>Jest</li>
+            <li>Heroku</li>
+            <li>TDD</li>
+            <li>RSpec</li>
+            <li>Dev Tools</li>
+            <li>Capybara</li>
           </ul>
         </li>
       </ul>
