--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
         <p>I can help you build a product , feature or website Look through some of my work and experience! If you like
           what you see and have a project you need coded,
           don’t hestiate to contact me.</p>
-        <button type="button" class="btn-resume">Get My Resume</button>
+        <a href="./images/Resume_complet.pdf" download>
+          <button type="button" class="btn-resume">Get My Resume</button>
+        </a>
       </div>
       <ul class="card-wrapper flex-center">
         <li class="cards d-flex flex-center">
