Update new project to my portfolio

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p>I can help you build a product , feature or website Look through some of my work and experience! If you like
           what you see and have a project you need coded,
           don’t hestiate to contact me.</p>
-        <a href="./images/Resume_complet.pdf" download>
+        <a href="./images/Ben_Resume.pdf" download>
           <button type="button" class="btn-resume">Get My Resume</button>
         </a>
       </div>
